[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngclava"
version = "0.1.beta1"

description = "Lava extention for ngc-learn."
authors = [
  {name = "William Gebhardt", email = "wdg1351@rit.edu"},
  {name = "Alexander Ororbia", email = "ago@cs.rit.edu"},
]
readme = "README.md"
keywords = ['python', 'complex-systems', 'simulation']
requires-python = ">=3.8"
license = {text = "BSD-3-Clause License"}

[project.urls]
Homepage = "https://github.com/NACLab/ngc-lava"
"Lab Page" = "https://www.cs.rit.edu/~ago/nac_lab.html"

